#1 paint "Actual result" in blue when it's a recovery instead of a victory and painted the options as well

--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -22,8 +22,14 @@ option.color_gain {
   color: #00ae00;
 }
 
-.color_loss {
+.color_loss,
+option.color_loss {
   color: #ff5e5e;
+}
+
+.color_recovery,
+option.color_recovery {
+  color: #8888ff;
 }
 
 .input_number {
